--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: Django GraphQL Auth
 site_description: GraphQL authentication for Django
-site_url: https://django-graphql-auth.readthedocs.io/en/latest
+site_url: https://strawberry-django-auth.readthedocs.io/en/latest
 site_author: pedrobern
-repo_name: pedrobern/django-graphql-auth
-repo_url: https://github.com/pedrobern/django-graphql-auth
+repo_name: pedrobern/strawberry-django-auth
+repo_url: https://github.com/pedrobern/strawberry-django-auth
 
 theme:
   name: "material"
