generic pk in userquery

--- a/tox.ini
+++ b/tox.ini
@@ -1,46 +1,46 @@
 [tox]
 envlist =
-  py{36,37,38}-django{22,30,master},
+  py{310}-django{22,30,40,master},
   flake8,black
 
 [travis:env]
 DJANGO =
-    2.2: django22
-    3.0: django30
+;    2.2: django22
+;    3.0: django30
     master: djangomaster
 
 [testenv]
 passenv = *
 usedevelop = True
 deps =
-    django22: Django>=2.2,<3.0
-    django30: Django>=3.0a1,<3.1
+;    django22: Django>=2.2,<3.0
+;    django30: Django>=3.0a1,<3.1
     djangomaster: https://github.com/django/django/archive/master.zip
     -e.[test]
 commands =
-  py.test \
-    --ds=tests.settings \
-    -m 'not settings_b' \
-    --cov=gqlauth \
-    --cov-report=xml \
-    {posargs}
-  py.test \
-    --ds=tests.settings_b \
-    -m 'settings_b' \
-    --cov=gqlauth \
-    --cov-report=xml \
-    --cov-append \
-    {posargs}
+;    manage test ../tests
+;    --ds=tests.settings \
+;    -m 'not settings_b' \
+;    --cov=gqlauth \
+;    --cov-report=xml \
+;    {posargs}
+;  py.test \
+;    --ds=tests.settings_b \
+;    -m 'settings_b' \
+;    --cov=gqlauth \
+;    --cov-report=xml \
+;    --cov-append \
+;    {posargs}
 
 [testenv:flake8]
-basepython=python3.8
+basepython=python3.10
 deps = -e.[dev]
 commands =
     flake8 gqlauth
 
 
 [testenv:black]
-basepython = python3.8
+basepython = python3.10
 deps = -e.[dev]
 commands  =
     black --exclude "/migrations/" gqlauth testproject setup.py quickstart tests --check
