tests with gh and tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,40 +1,59 @@
 [tox]
 envlist =
-  py{310}-django{22,30,40,master},
+  py{36,37,38,310}-django{22,30,40,master},
   flake8,black
 
 [travis:env]
 DJANGO =
-;    2.2: django22
-;    3.0: django30
+    2.2: django22
+    3.0: django30
+    4.0: django40
     master: djangomaster
+
+[gh-actions]
+python =
+    3.6: py36, mypy, flake8
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
 
 [testenv]
 passenv = *
 usedevelop = True
 deps =
-;    django22: Django>=2.2,<3.0
-;    django30: Django>=3.0a1,<3.1
+    django22: Django>=2.2,<3.0
+    django30: Django>=3.0a1,<3.1
     djangomaster: https://github.com/django/django/archive/master.zip
-    -e.[test]
+    -e .[test]
 commands =
-;    manage test ../tests
-;    --ds=tests.settings \
-;    -m 'not settings_b' \
-;    --cov=gqlauth \
-;    --cov-report=xml \
-;    {posargs}
-;  py.test \
-;    --ds=tests.settings_b \
-;    -m 'settings_b' \
-;    --cov=gqlauth \
-;    --cov-report=xml \
-;    --cov-append \
-;    {posargs}
+  py.test \
+  ;  django settings module
+    --ds=tests.settings \
+  ;  mark not setting b
+    -m 'not settings_b' \
+    --cov=gqlauth \
+    --cov-report=xml \
+    {posargs}
+  py.test \
+    --ds=tests.settings_b \
+    -m 'settings_b' \
+    --cov=gqlauth \
+    --cov-report=xml \
+    --cov-append \
+    {posargs}
+
+[pytest]
+testpaths =
+    tests
+    testproject
+pythonpath =
+    .
+    /home/nir/Desktop/git clones/django/strawberry-django-auth/testproject
 
 [testenv:flake8]
 basepython=python3.10
-deps = -e.[dev]
+deps = -e .[dev]
 commands =
     flake8 gqlauth
 
@@ -43,4 +62,4 @@ commands =
 basepython = python3.10
 deps = -e.[dev]
 commands  =
-    black --exclude "/migrations/" gqlauth testproject setup.py quickstart tests --check
+    black
