tests with gh and tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-  py{36,37,38,310}-django{22,30,40,master},
+  py{36,37,38,39,310}-django{22,30,40,master},
   flake8,black
 
 [travis:env]
@@ -47,9 +47,7 @@ commands =
 testpaths =
     tests
     testproject
-pythonpath =
-    .
-    /home/nir/Desktop/git clones/django/strawberry-django-auth/testproject
+
 
 [testenv:flake8]
 basepython=python3.10
@@ -62,4 +60,4 @@ commands =
 basepython = python3.10
 deps = -e.[dev]
 commands  =
-    black
+    black gqlauth
