--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,10 +8,12 @@ on:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+    name: ${{ matrix.session }} ${{ matrix.python-version }} / ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.6', '3.7', '3.8', '3.9',"3.10"]
+        python-version: ['3.6', '3.7', '3.8', '3.9','3.10']
 
     steps:
     - uses: actions/checkout@v2
