tests with gh and tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
 envlist =
-  py{38,39,310}-django{32,40,master},
+  py{38,39,310}-django{40,master},
   flake8,black
 
 [travis:env]
 DJANGO =
-    3.2.13: django32
     4.0: django40
     master: djangomaster
 
@@ -19,7 +18,7 @@ python =
 passenv = *
 usedevelop = True
 deps =
-    django32: Django>=3.0a1,<3.2
+    django40: Django>=4.0
     djangomaster: https://github.com/django/django/archive/master.zip
     -e .[test]
 commands =
