--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-  py{38,39,310}-django{40,master},
+  py{s39,310}-django{40,master},
   flake8,black
 
 [travis:env]
@@ -10,7 +10,6 @@ DJANGO =
 
 [gh-actions]
 python =
-    3.8: py38
     3.9: py39
     3: py310, mypy, flake8
 
