tests with gh and tox

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ deps =
     djangomaster: https://github.com/django/django/archive/master.zip
     -e .[test]
 commands =
+  python -m migrate
   py.test \
   ;  django settings module
     --ds=tests.settings \
