--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,4 +36,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
-        password: ${{ pypi-AgEIcHlwaS5vcmcCJDdmMzg1ZmU5LWM0YzItNDI4ZS1iNWI1LTZjNjgzOTkzNTk0MgACR3sicGVybWlzc2lvbnMiOiB7InByb2plY3RzIjogWyJzdHJhd2JlcnJ5LWRqYW5nby1hdXRoIl19LCAidmVyc2lvbiI6IDF9AAAGIBdJYT6f44uSQ7cQAabqJarCSXPExgFsKQKUvm2qkZ3r }}
+        password: ${{ secrets.PYPI_API_TOKEN  }}
