--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,12 +30,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+        python setup.py sdist
+
     - name: Build package
       run: python -m build
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         verbose: true
-        repository_url: https://pypi.org/project/strawberry-django-auth/
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN  }}
