--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,12 +16,12 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
-
+  build-n-publish:
+    name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@master
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
@@ -32,11 +32,22 @@ jobs:
         pip install build
         pip install twine
 
-    - name: Build package
-      run: python setup.py sdist
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@main
+    - name: Build a binary wheel and a source tarball
+      run: >-
+        python -m
+        build
+        --sdist
+        --wheel
+        --outdir dist/
+        .
+
+    - name: Publish distribution 📦 to Test PyPI
+      uses: pypa/gh-action-pypi-publish@master
       with:
-        verbose: true
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN  }}
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        repository_url: https://test.pypi.org/legacy/
+    - name: Publish distribution 📦 to PyPI
+      if: startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
