tests with gh and tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
   py{s39,310}-django{40,master},
+  skip_missing_interpreters = {env:COVERAGE_SKIP_MISSING_INTERPRETERS:True}
   flake8,black
 
 [travis:env]
