--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ['3.9','3.10']
+        os: [ubuntu-latest]
+        python-version: [3.10']
 
     steps:
     - uses: actions/checkout@v2
