--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,7 +5,11 @@ mkdocs:
 
 formats: all
 
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.10"
+
 python:
-  version: 3.10
   install:
     - requirements: docs/requirements.txt
