update docs site fix 1 test

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,10 @@ commands =
     {posargs}
 
 [pytest]
+markers =
+    settings_b: migrations with other settings
+    serial
+
 testpaths =
     tests
     testproject
