update docs site fix 1 test

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Strawberry Django Auth
 site_description: GraphQL authentication for Django
-site_url: https://strawberry-django-auth.readthedocs.io/en/latest
+site_url: https://nrbnlulu.github.io/strawberry-django-auth/
 site_author: nirbenlulu
 repo_name: nrbnlulu/strawberry-django-auth
 repo_url: https://github.com/nrbnlulu/strawberry-django-auth
