update docs site fix 1 test

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,10 @@ markdown_extensions:
   - admonition
   - codehilite
   - attr_list
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
