--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ usedevelop = True
 deps =
     django40: Django>=4.0
     djangomaster: https://github.com/django/django/archive/master.zip
-    -e .[test]
+    -e ./src[test]
 commands =
   python -m migrate
   py.test \
@@ -28,7 +28,7 @@ commands =
     --ds=tests.settings \
   ;  mark not setting b
     -m 'not settings_b' \
-    --cov=gqlauth \
+    --cov=src/gqlauth \
     --cov-report=xml \
     {posargs}
   py.test \
@@ -46,8 +46,10 @@ markers =
 
 testpaths =
     tests
-    testproject
 
+python_paths =
+    ./tests/testproject
+    ./tests
 
 [testenv:flake8]
 basepython=python3.10
