update docs site fix 1 test

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,4 @@ line_length=88
 exclude = setup.py,docs/*,testproject/*,tests,quickstart/
 max-line-length = 88
 extend-ignore = E203
-ignore = apps.py F401, utils.py W503
+ignore = apps.py F401, utils.py W503, decorators.py E266
