--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps =
     -e ./src[test]
 commands =
   python -m migrate
-  py.test \
+  python -m pytest \
   ;  django settings module
     --ds=tests.settings \
   ;  mark not setting b
@@ -31,7 +31,7 @@ commands =
     --cov=src/gqlauth \
     --cov-report=xml \
     {posargs}
-  py.test \
+  python -m pytest \
     --ds=tests.settings_b \
     -m 'settings_b' \
     --cov=gqlauth \
@@ -55,11 +55,11 @@ python_paths =
 basepython=python3.10
 deps = -e .[dev]
 commands =
-    flake8 gqlauth
+    make lint
 
 
 [testenv:black]
 basepython = python3.10
 deps = -e.[dev]
 commands  =
-    black gqlauth
+    make format
