--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ usedevelop = True
 deps =
     django40: Django>=4.0
     djangomaster: https://github.com/django/django/archive/master.zip
-    -e ./src[test]
+    -e .[test]
 commands =
   python -m migrate
   python -m pytest \
