--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,21 @@ theme:
 extra:
   analytics:
     provider: google
-    property: UA-XXXXXXXX-X
+    property: G-XYFSBNLH00
+    feedback:
+      title: Was this page helpful?
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: This page was helpful
+          data: 1
+          note: >-
+            Thanks for your feedback!
+        - icon: material/emoticon-sad-outline
+          name: This page could be improved
+          data: 0
+          note: >-
+            Thanks for your feedback! Help us improve this page by
+            <a href="https://github.com/nrbnlulu/strawberry-django-auth/issues" target=_blank>posting an issue</a>.
 
 markdown_extensions:
   - admonition
