--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands =
     --ds=tests.settings \
   ;  mark not setting b
     -m 'not settings_b' \
-    --cov=src/gqlauth \
+    --cov=gqlauth \
     --cov-report=xml \
     {posargs}
   python -m pytest \
