--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
   py{s39,310}-django{40,master},
   skip_missing_interpreters = {env:COVERAGE_SKIP_MISSING_INTERPRETERS:True}
-  flake8,black
+  flake8,black, make
 
 [travis:env]
 DJANGO =
@@ -47,9 +47,9 @@ markers =
 testpaths =
     tests
 
-python_paths =
-    ./tests/testproject
-    ./tests
+;python_paths =
+;    ./tests/testproject
+;    ./tests
 
 [testenv:flake8]
 basepython=python3.10
