--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,9 +105,10 @@ force_sort_within_sections = true
 
 [tool.mypy]
 plugins = ["mypy_django_plugin.main"]
+ignore_missing_imports = "True"
 
 [tool.django-stubs]
-django_settings_module = "strawberry_django_jwt.settings"
+django_settings_module = "tests.settings"
 
 [build-system]
 requires = ["poetry>=0.12"]
