migrate to async - test_archive_account.py: pass.

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,6 @@
 [run]
 source = gqlauth
-omit = .venv/**,tests/migrations/**,manage.py
+omit = .venv/**,tests/migrations/**,manage.py, docs/**,  quickstart/**, setup.py, migrate.py
 
 [report]
 precision = 2
