--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "strawberry-django-auth"
-version = "0.3.3.0"
+version = "0.3.3.1"
 description = "Graphql authentication system with Strawberry for Django."
 license = "MIT"
 authors = ["Nir.J Benlulu <nrbnlulu@gmail.com>"]
@@ -61,6 +61,7 @@ pymdown-extensions = "^9.5"
 Markdown = "^3.3.7"
 Faker = "^13.15.0"
 pre-commit = "^2.19.0"
+pytest-asyncio = "^0.18.3"
 
 
 [tool.pytest.ini_options]
@@ -72,6 +73,7 @@ testpaths = [
 ]
 DJANGO_SETTINGS_MODULE = "tests.settings"
 python_files = "tests.py test_*.py *_tests.py"
+asyncio_mode = "auto"
 markers = [
     "settings_b: migrations with other settings"
 ]
