--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ packaging = ">=20.0,<30.0"
 importlib-metadata = { version = ">=1.7,<5.0", python = "<=3.7" }
 Pillow = "^9.2.0"
 strawberry-django-jwt = "^0.2.1"
+password = "^0.2"
+secondary = "^1.0"
 
 [tool.poetry.dev-dependencies]
 cryptography = "^37.0"
@@ -62,6 +64,7 @@ Markdown = "^3.3.7"
 Faker = "^13.15.0"
 pre-commit = "^2.19.0"
 pytest-asyncio = "^0.18.3"
+daphne = "^3.0.2"
 
 
 [tool.pytest.ini_options]
@@ -73,7 +76,7 @@ testpaths = [
 ]
 DJANGO_SETTINGS_MODULE = "tests.settings"
 python_files = "tests.py test_*.py *_tests.py"
-asyncio_mode = "auto"
+asyncio_mode = "strict"
 markers = [
     "settings_b: migrations with other settings"
 ]
