migrate to async - Fixed async test works: captcha, archive account.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ testpaths = [
 ]
 DJANGO_SETTINGS_MODULE = "tests.settings"
 python_files = "tests.py test_*.py *_tests.py"
-asyncio_mode = "strict"
+asyncio_mode = "auto"
 markers = [
     "settings_b: migrations with other settings"
 ]
