migrate to async - Fix: docs changes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,25 +10,24 @@ theme:
   language: en
   palette:
   - scheme: default
-    primary: purple
-    accent: indigo
+    primary: red
+    accent: green
     toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to light mode
 
   - scheme: slate
-    primary: black
-    accent: purple
+    primary: green
+    accent: red
     toggle:
       icon: material/toggle-switch
       name: Switch to dark mode
 
-
-
-  logo: images/graphql_logo.svg
-  favicon: images/favicon.ico
+  logo: images/logo.png
+  favicon: images/logo.png
   features:
     - content.code.annotate
+    -
 extra:
   analytics:
     provider: google
