--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,8 @@ DJANGO_SETTINGS_MODULE = "tests.settings"
 python_files = "tests.py test_*.py *_tests.py"
 asyncio_mode = "auto"
 markers = [
-    "settings_b: migrations with other settings"
+    "default_user: uses the default settings, a user with email address and default USERNAME_FIELD",
+    "settings_b: uses a custom user model, not captcha validation as well as some other non-default settings"
 ]
 
 [tool.poetry.urls]
