--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "strawberry-django-auth"
-version = "0.3.4.0"
+version = "0.3.4.1"
 description = "Graphql authentication system with Strawberry for Django."
 license = "MIT"
 authors = ["Nir.J Benlulu <nrbnlulu@gmail.com>"]
@@ -63,6 +63,7 @@ Faker = "^13.15.1"
 pre-commit = "^2.20.0"
 pytest-asyncio = "^0.19.0"
 daphne = "^3.0.2"
+pydoc-markdown = {extras = ["novella"], version = "^4.6.3"}
 
 
 [tool.pytest.ini_options]
