--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,12 +29,13 @@ Django = [
 ]
 
 PyJWT = ">=1.7.1,<3.0"
-strawberry-graphql = { version = ">=0.69.0,<1.0.0", allow-prereleases = true }
 strawberry-graphql-django = { version = ">=0.2.5,<4.0", allow-prereleases = true }
 django-admin-display = "^1.3.0"
 packaging = ">=20.0,<30.0"
 importlib-metadata = { version = ">=1.7,<5.0", python = "<=3.7" }
 Pillow = "^9.2.0"
+strawberry-graphql = "^0.128.0"
+strawberry-django-plus = "^1.25.2"
 
 [tool.poetry.dev-dependencies]
 cryptography = "^37.0"
