--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,8 @@ pre-commit = "^2.20.0"
 pytest-asyncio = "^0.19.0"
 daphne = "^3.0.2"
 pydoc-markdown = {extras = ["novella"], version = "^4.6.3"}
+channels = "^3.0.5"
+gql = {extras = ["all"], version = "^3.4.0"}
 
 
 [tool.pytest.ini_options]
