--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,11 +112,11 @@ multi_line_output = 3
 force_sort_within_sections = true
 
 [tool.mypy]
-plugins = ["mypy_django_plugin.main"]
+plugins = ["mypy_django_plugin.main", "strawberry.ext.mypy_plugin"]
 ignore_missing_imports = "True"
 
 [tool.django-stubs]
-django_settings_module = "tests.settings"
+django_settings_module = "testproject.settings"
 
 [build-system]
 requires = ["poetry>=0.12"]
