support mypy - add mypy to gh-actions.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,10 @@ jobs:
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
-
+      - name: mypy_checks
+        run: |
+          poetry install
+          poetry run mypy ./gqlauth
       - name: Run tests
         run: |
           poetry install
