fit - CI and versioning.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,7 @@ jobs:
           key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: mypy_checks
         run: |
+          poetry config experimental.new-installer false
           poetry install
           poetry run mypy ./gqlauth
       - name: Run tests
