--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Django = [
-    { version = ">=3.2,<4", markers = "python_version < '3.8'", optional = true },
-    { version = ">=3.2,<5", markers = "python_version >= '3.8'", optional = true }
-]
+Django = ">=3.2,<4.1"
 
 PyJWT = ">=2.6.0,<3.0"
 strawberry-graphql-django = { version = ">=0.2.5,<4.0", allow-prereleases = true }
