--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,7 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
+    fail-fast: false
     strategy:
       matrix:
         django-version: ["3.2.0", "4.1.3"]
