fit - CI and versioning.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,11 @@ classifiers = [
     'Operating System :: OS Independent',
     'Framework :: Django',
     'Framework :: Django :: 3.2',
-    'Framework :: Django :: 4.0',
+    'Framework :: Django :: 4.1',
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11"
 ]
 packages = [
     { include = "gqlauth" }
