--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,10 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 Django = ">=3.2,<4.2"
-
 PyJWT = ">=2.6.0,<3.0"
 strawberry-graphql-django = { version = ">=0.2.5,<4.0", allow-prereleases = true }
-django-admin-display = "^1.3.0"
-packaging = ">=20.0,<30.0"
-importlib-metadata = { version = ">=1.7,<6.0", python = "<=3.7" }
 Pillow = "^9.2.0"
 strawberry-graphql = ">=0.128,<0.171.0"
 strawberry-django-plus = "^1.25.2"
