--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+python = ">=3.8,<3.12"
 Django = ">=3.2,<4.2"
 PyJWT = ">=2.6.0,<3.0"
 strawberry-graphql-django = { version = ">=0.2.5,<4.0", allow-prereleases = true }
@@ -43,8 +43,6 @@ django-mock-queries = "^2.1.7"
 types-mock = "^4.0.15"
 types-jwt = "^0.1.0"
 types-pkg-resources = "^0.1.0"
-black = "^22.12.0"
-isort = "^5.10.1"
 mypy = "^0.961"
 django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
 django-stubs-ext = "^0.7"
@@ -59,8 +57,8 @@ pre-commit = "^2.20.0"
 pytest-asyncio = "^0.20.3"
 pydoc-markdown = {extras = ["novella"], version = "^4.6.3"}
 gql = {extras = ["all"], version = "^3.4.0"}
-channels = "^4.0.0"
-daphne = "^4.0.0"
+setuptools = "^65.6.3"
+channels = {extras = ["daphne"], version = "^4.0.0"}
 
 
 [tool.pytest.ini_options]
