--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,9 +56,8 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [lint, tests]
-    if: ${{ needs.lint.result == 'success' &&
-      needs.tests.result == 'success' &&
+    needs: [tests]
+    if: ${{ needs.tests.result == 'success' &&
       github.event.action == 'published' }}
 
     steps:
