--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -9,62 +9,35 @@ repos:
         args: ["--maxkb=1024"]
 
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
+    rev: v2.1.0
     hooks:
       - id: codespell
-        args: ["--skip=*.po"]
+        args: ["--skip=*.json"]
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
+    rev: v2.34.0
     hooks:
       - id: pyupgrade
         args: ["--py38-plus"]
 
-  - repo: https://github.com/PyCQA/autoflake
-    rev: v2.0.0
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.186
     hooks:
-      - id: autoflake
-        args: ["--in-place", "--remove-all-unused-imports"]
+      - id: ruff
 
-  - repo: https://github.com/pycqa/isort
-    rev: 5.11.4
-    hooks:
-      - id: isort
-        name: isort (python)
-      - id: isort
-        name: isort (cython)
-        types: [cython]
-      - id: isort
-        name: isort (pyi)
-        types: [pyi]
 
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 22.6.0
     hooks:
       - id: black
         args: ["--config", "pyproject.toml", "--target-version", "py310"]
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        args: # arguments to configure flake8
-          # making isort line length compatible with black
-          - "--max-line-length=100"
-          - "--max-complexity=18"
-          # these are errors that will be ignored by flake8
-          # check out their meaning here
-          # https://flake8.pycqa.org/en/latest/user/error-codes.html
-          - "--ignore=E203,E266,E501,W503,F403,F401,E402, A003, R505"
-        additional_dependencies:
-          [
-            "flake8-bugbear",
-            "flake8-builtins",
-            "flake8-comprehensions",
-            "flake8-return",
-            "flake8-simplify"
-          ]
 
   - repo: https://github.com/python-poetry/poetry
-    rev: 1.3.0
+    rev: 1.2.2
     hooks:
       - id: poetry-check
+
+  - repo: https://github.com/PyCQA/docformatter
+    rev: v1.5.1
+    hooks:
+      - id: docformatter
