--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,6 @@ mkdocs-minify-plugin = "^0.5.0"
 pymdown-extensions = "^9.9"
 Markdown = "^3.4.1"
 Faker = "^18.2.0"
-pre-commit = "^2.21.0"
 pytest-asyncio = "^0.21.0"
 pydoc-markdown = {extras = ["novella"], version = "^4.6.4"}
 gql = {extras = ["all"], version = "^3.4.0"}
@@ -116,8 +115,10 @@ requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.autopub]
-git-username = "nrbnlulu"
-git-email = "nrbnlulu@gmail.com"
+git-username = "gqlauth-bot"
+git-email = "bot@no.reply"
+project-name = "gqlauth"
+append-github-contributor = true
 
 [tool.ruff]
 line-length = 100
