--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,6 @@ strawberry-graphql = ">=0.128,<0.171.0"
 strawberry-django-plus = ">=1.25.2,<3.0.0"
 
 [tool.poetry.dev-dependencies]
-cryptography = "^39.0"
 coverage = "^7.2"
 pytest = "^7.2"
 pytest-cov = "^4.0"
@@ -53,7 +52,6 @@ mkdocs-minify-plugin = "^0.5.0"
 pymdown-extensions = "^9.9"
 Markdown = "^3.4.1"
 Faker = "^18.2.0"
-pre-commit = "^2.21.0"
 pytest-asyncio = "^0.21.0"
 pydoc-markdown = {extras = ["novella"], version = "^4.6.4"}
 gql = {extras = ["all"], version = "^3.4.0"}
@@ -116,8 +114,10 @@ requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.autopub]
-git-username = "nrbnlulu"
-git-email = "nrbnlulu@gmail.com"
+git-username = "gqlauth-bot"
+git-email = "bot@no.reply"
+project-name = "gqlauth"
+append-github-contributor = true
 
 [tool.ruff]
 line-length = 100
