--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,12 @@ packages = [
 python = ">=3.8,<3.12"
 Django = ">=3.2,<4.2"
 PyJWT = ">=2.6.0,<3.0"
-strawberry-graphql-django = { version = ">=0.2.5,<4.0", allow-prereleases = true }
-Pillow = "^9.2.0"
-strawberry-graphql = ">=0.128,<0.171.0"
 strawberry-django-plus = ">=1.25.2,<3.0.0"
+pillow = {version = "^9.5.0", extras = ["captcha"]}
+django-stubs = {extras = ["compatible-mypy"], version = "^4.2.0"}
+
+[tool.poetry.extras]
+captcha = ["pillow"]
 
 [tool.poetry.dev-dependencies]
 coverage = "^7.2"
@@ -42,9 +44,6 @@ django-mock-queries = "^2.1.7"
 types-mock = "^5.0.0"
 types-jwt = "^0.1.0"
 types-pkg-resources = "^0.1.0"
-mypy = "^0.961"
-django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
-django-stubs-ext = "^0.7"
 mkdocs = "^1.3.0"
 mkdocs-markdownextradata-plugin = "^0.2.5"
 mkdocs-material = "^8.5.4"
