--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,18 +44,17 @@ django-mock-queries = "^2.1.7"
 types-mock = "^5.0.0"
 types-jwt = "^0.1.0"
 types-pkg-resources = "^0.1.0"
-mkdocs = "^1.3.0"
-mkdocs-markdownextradata-plugin = "^0.2.5"
-mkdocs-material = "^8.5.4"
-mkdocs-minify-plugin = "^0.5.0"
-pymdown-extensions = "^9.9"
-Markdown = "^3.4.1"
-Faker = "^18.2.0"
-pytest-asyncio = "^0.21.0"
-pydoc-markdown = {extras = ["novella"], version = "^4.6.4"}
-gql = {extras = ["all"], version = "^3.4.0"}
-setuptools = "^67.6.0"
-channels = {extras = ["daphne"], version = "^4.0.0"}
+mkdocs = ">=1.3.0"
+mkdocs-markdownextradata-plugin = ">=0.2.5"
+mkdocs-material = ">=8.5.4"
+mkdocs-minify-plugin = ">=0.5.0"
+pymdown-extensions = ">=9.9"
+Markdown = ">=3.4.1"
+Faker = ">=18.2.0"
+pytest-asyncio = ">=0.21.0"
+pydoc-markdown = {extras = ["novella"], version = ">=4.6.4"}
+setuptools = ">=67.6.0"
+channels = {extras = ["daphne"], version = ">=4.0.0"}
 
 
 [tool.pytest.ini_options]
