--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,9 @@ packages = [
 python = ">=3.8,<3.12"
 Django = ">=3.2,<4.3"
 PyJWT = ">=2.6.0,<3.0"
-strawberry-django-plus = ">=1.25.2,<3.0.0"
 pillow = {version = "^9.5.0", extras = ["captcha"]}
 django-stubs = {extras = ["compatible-mypy"], version = "^4.2.0"}
+strawberry-graphql-django = ">=0.10.5"
 
 [tool.poetry.extras]
 captcha = ["pillow"]
