--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,12 @@ strawberry-graphql-django = ">=0.10.5"
 [tool.poetry.extras]
 captcha = ["pillow"]
 
-[tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.3.3"
 coverage = "^7.2"
 pytest = "^7.2"
 pytest-cov = "^4.0"
-pytest-django = "^4.0.0"
 types-cryptography = "^3.3.23"
 django-mock-queries = "^2.1.7"
 types-mock = "^5.0.0"
@@ -55,6 +56,7 @@ pytest-asyncio = ">=0.21.0"
 pydoc-markdown = {extras = ["novella"], version = ">=4.6.4"}
 setuptools = ">=67.6.0"
 channels = {extras = ["daphne"], version = ">=4.0.0"}
+pytest-django = "^4.5.2"
 
 
 [tool.pytest.ini_options]
