--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ classifiers = [
     'Framework :: Django',
     'Framework :: Django :: 3.2',
     'Framework :: Django :: 4.1',
+    'Framework :: Django :: 4.2',
+    'Framework :: Django :: 5.0',
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -26,7 +28,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.13"
-Django = ">=3.2,<4.3"
+Django = ">=3.2"
 PyJWT = ">=2.6.0,<3.0"
 pillow = {version = ">=9.5,<11.0", extras = ["captcha"]}
 django-stubs = {extras = ["compatible-mypy"], version = "^4.2.0"}
