--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,14 +10,12 @@ on:
     types: [released]
 
 jobs:
-
-
   tests:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        django-version: ["3.2.0", "4.1.3"]
+        django-version: ["3.2.0", "4.1.3", "4.2.8", "5.0"]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
