--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,18 +20,16 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12"
+    "Programming Language :: Python :: 3.12",
 ]
-packages = [
-    { include = "gqlauth" }
-]
+packages = [{ include = "gqlauth" }]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.13"
-Django = ">=3.2"
+Django = ">=3.2,<=5.0"
 PyJWT = ">=2.6.0,<3.0"
-pillow = {version = ">=9.5,<11.0", extras = ["captcha"]}
-django-stubs = {extras = ["compatible-mypy"], version = "^4.2.0"}
+pillow = { version = ">=9.5,<11.0", extras = ["captcha"] }
+django-stubs = { extras = ["compatible-mypy"], version = "^4.2.0" }
 strawberry-graphql-django = ">=0.10.5"
 
 [tool.poetry.extras]
@@ -56,9 +54,9 @@ pymdown-extensions = ">=9.9"
 Markdown = ">=3.4.1"
 Faker = ">=18.2.0"
 pytest-asyncio = ">=0.21.0"
-pydoc-markdown = {extras = ["novella"], version = ">=4.6.4"}
+pydoc-markdown = { extras = ["novella"], version = ">=4.6.4" }
 setuptools = ">=67.6.0"
-channels = {extras = ["daphne"], version = ">=4.0.0"}
+channels = { extras = ["daphne"], version = ">=4.0.0" }
 pytest-django = "^4.5.2"
 
 
@@ -66,15 +64,13 @@ pytest-django = "^4.5.2"
 django_find_project = false
 minversion = "6.0"
 addopts = "-ra -q"
-testpaths = [
-    "tests",
-]
+testpaths = ["tests"]
 DJANGO_SETTINGS_MODULE = "testproject.settings"
 python_files = "tests.py test_*.py *_tests.py"
 asyncio_mode = "auto"
 markers = [
     "default_user: uses the default settings, a user with email address and default USERNAME_FIELD",
-    "settings_b: uses a custom user model, not captcha validation as well as some other non-default settings"
+    "settings_b: uses a custom user model, not captcha validation as well as some other non-default settings",
 ]
 
 [tool.poetry.urls]
@@ -127,7 +123,7 @@ line-length = 100
 select = ["E", "F", "ERA", "I"]
 ignore = [
     "TID252",
-    "E501",  # line too long, handled by black
+    "E501",   # line too long, handled by black
 ]
 fix = true
 
