--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,11 +11,13 @@ on:
 
 jobs:
   tests:
+    env:
+      HATCH_ENV: test.py${{ matrix.python-version }}.${{ matrix.django-version }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        django-version: ["3.2.0", "4.1.3", "4.2.8", "5.0"]
+        django-version: ["3.2.25", "4.1.13", "4.2.11", "5.0.3"]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         exclude:
           # excludes Python 3.8 and 3.9 for Django 5.0.
@@ -33,23 +35,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+      - name: Install Hatch
+        run: pipx install hatch
 
-      - name: Load cached venv
-        id: cached-poetry
-        uses: actions/cache@v3
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Run tests
         run: |
-          poetry install -E captcha
-          poetry run pip install "Django~=${{ matrix.django-version }}"
-          make test
+          hatch test
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
