--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,64 +1,106 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
 name = "strawberry-django-auth"
 version = "0.376.5"
 description = "Graphql authentication system with Strawberry for Django."
-license = "MIT"
-authors = ["Nir.J Benlulu <nrbnlulu@gmail.com>"]
-maintainers = ["Nir.J Benlulu <nrbnlulu@gmail.com>"]
 readme = "README.md"
+requires-python = ">=3.8"
+license = "MIT"
+keywords = []
+authors = [{ name = "Nir.J Benlulu", email = "nrbnlulu@gmail.com" }]
+maintainers = [{ name = "Nir.J Benlulu", email = "nrbnlulu@gmail.com" }]
 classifiers = [
-    'Environment :: Web Environment',
-    'Intended Audience :: Developers',
-    'License :: OSI Approved :: MIT License',
-    'Operating System :: OS Independent',
-    'Framework :: Django',
-    'Framework :: Django :: 3.2',
-    'Framework :: Django :: 4.1',
-    'Framework :: Django :: 4.2',
-    'Framework :: Django :: 5.0',
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
+  "Environment :: Web Environment",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Framework :: Django",
+  "Framework :: Django :: 3.2",
+  "Framework :: Django :: 4.1",
+  "Framework :: Django :: 4.2",
+  "Framework :: Django :: 5.0",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
 ]
-packages = [{ include = "gqlauth" }]
+dependencies = [
+  "Django >=4.2,<6.0",
+  "PyJWT >=2.6.0,<3.0",
+  "pillow >=9.5,<11.0",
+  "django-stubs[compatible-mypy] ==4.2.0",
+  "strawberry-graphql-django >=0.10.5",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.8,<3.13"
-Django = ">=3.2,<=5.0"
-PyJWT = ">=2.6.0,<3.0"
-pillow = { version = ">=9.5,<11.0", extras = ["captcha"] }
-django-stubs = { extras = ["compatible-mypy"], version = "^4.2.0" }
-strawberry-graphql-django = ">=0.10.5"
+[project.urls]
+Documentation = "https://nrbnlulu.github.io/strawberry-django-auth/"
+Issues = "https://github.com/nrbnlulu/strawberry-django-auth/issues"
+Source = "https://github.com/nrbnlulu/strawberry-django-auth"
 
-[tool.poetry.extras]
+[project.optional-dependencies]
 captcha = ["pillow"]
 
+[project.scripts]
+# Define any entry points
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^3.3.3"
-coverage = "^7.2"
-pytest = "^7.2"
-pytest-cov = "^4.0"
-types-cryptography = "^3.3.23"
-django-mock-queries = "^2.1.7"
-types-mock = "^5.0.0"
-types-jwt = "^0.1.0"
-types-pkg-resources = "^0.1.0"
-mkdocs = ">=1.3.0"
-mkdocs-markdownextradata-plugin = ">=0.2.5"
-mkdocs-material = ">=8.5.4"
-mkdocs-minify-plugin = ">=0.5.0"
-pymdown-extensions = ">=9.9"
-Markdown = ">=3.4.1"
-Faker = ">=18.2.0"
-pytest-asyncio = ">=0.21.0"
-pydoc-markdown = { extras = ["novella"], version = ">=4.6.4" }
-setuptools = ">=67.6.0"
-channels = { extras = ["daphne"], version = ">=4.0.0" }
-pytest-django = "^4.5.2"
+[tool.hatch.build.targets.wheel]
+packages = ["gqlauth"]
 
+[tool.hatch.envs.default]
+dependencies = [
+  #"Django ==5.0.3",
+  "pre-commit ~=3.3.3",
+  "setuptools >=67.6.0",
+  "channels[daphne] >=4.0.0",
+  "captcha >=0.3.0",
+]
+
+[tool.hatch.envs.docs]
+dependencies = [
+  "mkdocs >=1.3.0",
+  "mkdocs-markdownextradata-plugin >=0.2.5",
+  "mkdocs-material >=8.5.4",
+  "mkdocs-minify-plugin >=0.5.0",
+  "pymdown-extensions >=9.9",
+  "Markdown >=3.4.1",
+  "pydoc-markdown[novella] >=4.6.4",
+]
+
+[tool.hatch.envs.docs.scripts]
+prebuild = "python docs/pre_build.py"
+build = "mkdocs build"
+serve = "mkdocs serve"
+deploy = "mkdocs gh-deploy --force"
+
+[tool.hatch.envs.test]
+extra-dependencies = [
+  "Django=={matrix:django}",
+  "coverage[toml]>=6.5",
+  "pytest",
+  "pytest-cov ~=4.0",
+  "django-mock-queries ~=2.1.7",
+  "Faker >=18.2.0",
+  "pytest-asyncio >=0.21.0",
+  "pytest-django ~=4.5.2",
+]
+
+[[tool.hatch.envs.test.matrix]]
+python = ["3.10", "3.11", "3.12"]
+django = ["5.0.3"]
+
+[[tool.hatch.envs.test.matrix]]
+python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+django = ["4.2.11"]
+
+[tool.hatch.envs.test.scripts]
+test = "pytest --ds=testproject.settings -m 'not settings_b' --cov=gqlauth --cov-report=xml"
+test-cov = "coverage run -m pytest {args:tests}"
+cov-report = ["- coverage combine", "coverage report"]
+cov = ["test-cov", "cov-report"]
 
 [tool.pytest.ini_options]
 django_find_project = false
@@ -69,13 +111,29 @@ DJANGO_SETTINGS_MODULE = "testproject.settings"
 python_files = "tests.py test_*.py *_tests.py"
 asyncio_mode = "auto"
 markers = [
-    "default_user: uses the default settings, a user with email address and default USERNAME_FIELD",
-    "settings_b: uses a custom user model, not captcha validation as well as some other non-default settings",
+  "default_user: uses the default settings, a user with email address and default USERNAME_FIELD",
+  "settings_b: uses a custom user model, not captcha validation as well as some other non-default settings",
 ]
 
-[tool.poetry.urls]
-"Homepage" = "https://github.com/nrbnlulu/strawberry-django-auth"
-"Documentation" = "https://nrbnlulu.github.io/strawberry-django-auth/"
+[tool.hatch.envs.types]
+dependencies = [
+  "mypy>=1.0.0",
+  "types-cryptography ~=3.3.23",
+  "types-mock ~=5.0.0",
+  "types-jwt ~=0.1.0",
+  "types-pkg-resources ~=0.1.0",
+]
+
+[tool.hatch.envs.types.scripts]
+check = "mypy --install-types --non-interactive {args:gqlauth tests}"
+
+[tool.hatch.envs.lint]
+detached = true
+dependencies = ["black>=23.1.0", "ruff>=0.0.243"]
+
+[tool.hatch.envs.lint.scripts]
+check = ["ruff check {args:.}", "black --check --diff {args:.}"]
+fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
 
 [tool.black]
 line-length = 100
@@ -103,14 +161,10 @@ force_sort_within_sections = true
 
 [tool.mypy]
 plugins = ["mypy_django_plugin.main", "strawberry.ext.mypy_plugin"]
-ignore_missing_imports = "True"
+ignore_missing_imports = true
 
 [tool.django-stubs]
 django_settings_module = "testproject.settings"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
 
 [tool.autopub]
 git-username = "gqlauth-bot"
@@ -120,11 +174,12 @@ append-github-contributor = true
 
 [tool.ruff]
 line-length = 100
+fix = true
+src = ["gqlauth", "tests", "testproject"]
+
+[tool.ruff.lint]
 select = ["E", "F", "ERA", "I"]
 ignore = [
-    "TID252",
-    "E501",   # line too long, handled by black
+  "TID252",
+  "E501",   # line too long, handled by black
 ]
-fix = true
-
-src = ["gqlauth", "tests", "testproject"]
