--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,10 +1,10 @@
-name: docs deploy
+name: Deploy Docs
 on:
   push:
     branches:
       - main
 jobs:
-  deploy:
+  docs-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
