--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         - name: Install deps
           run: |
             python -m pip install pip --upgrade
-            python -m pip install poetry githubrelease httpx==0.18.2 autopub poetry
+            python -m pip install hatch githubrelease httpx==0.18.2 autopub
 
 
         - name: Check if we should release
@@ -32,11 +32,10 @@ jobs:
           if: steps.check_release.outputs.release == ''
           env:
             GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
-            POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
           run: |
             git remote set-url origin https://${{ secrets.BOT_TOKEN }}@github.com/${{ github.repository }}
             autopub prepare
-            poetry build
+            hatch build
             autopub commit
             autopub githubrelease
-            poetry publish --username __token__
+            hatch publish --username __token__ --password ${{ secrets.PYPI_TOKEN }}
