--- a/.github/workflows/release_check.yml
+++ b/.github/workflows/release_check.yml
@@ -23,7 +23,7 @@ jobs:
         id: check_release
         run: |
           python -m pip install --upgrade pip
-          python -m pip install poetry githubrelease httpx==0.18.2 autopub
+          python -m pip install githubrelease httpx==0.18.2 autopub
           echo "release=$(autopub check)" >> $GITHUB_OUTPUT
 
       - uses: mshick/add-pr-comment@v2
